--- a/BlueMS/src/main/res/layout-land/fragment_eviromental_sensors.xml
+++ b/BlueMS/src/main/res/layout-land/fragment_eviromental_sensors.xml
@@ -36,9 +36,168 @@
   ~ OF SUCH DAMAGE.
   -->
 
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.st.BlueMS.demos.EnvironmentalSensorsFragment">
+
+    <android.support.constraint.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/guidelineVerticalFirstQuarter"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.25" />
+    <android.support.constraint.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/guidelineVerticalCenter"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
+    <android.support.constraint.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/guidelineVerticalTherdQuarter"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.75" />
+
+    <android.support.constraint.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/guidelineHorizontal"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.5" />
+
+    <ImageView
+        android:id="@+id/thermometerImage"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:srcCompat="@drawable/temperature_icon"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintRight_toLeftOf="@+id/guidelineVerticalFirstQuarter"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal" />
+
+    <TextView
+        android:id="@+id/thermometerText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/sensorNotAvailable"
+        android:textAlignment="center"
+        android:textSize="22sp"
+        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
+        app:layout_constraintLeft_toLeftOf="@+id/guidelineVerticalFirstQuarter"
+        app:layout_constraintRight_toLeftOf="@+id/guidelineVerticalCenter"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/barometerImage"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/guidelineVerticalFirstQuarter"
+        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal"
+        app:srcCompat="@drawable/pressure_icon" />
+
+    <TextView
+        android:id="@+id/barometerText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/sensorNotAvailable"
+        android:textAlignment="center"
+        android:textSize="22sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="@+id/guidelineVerticalFirstQuarter"
+        app:layout_constraintRight_toLeftOf="@+id/guidelineVerticalCenter"
+        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal" />
+
+    <ImageView
+        android:id="@+id/luminosityImage"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:srcCompat="@drawable/illuminance_icon"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
+        app:layout_constraintRight_toLeftOf="@+id/guidelineVerticalTherdQuarter"
+        android:layout_marginRight="8dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/guidelineVerticalCenter" />
+
+    <TextView
+        android:id="@+id/luminosityText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/sensorNotAvailable"
+        android:textAlignment="center"
+        android:textSize="22sp"
+        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintLeft_toRightOf="@+id/luminosityImage"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/humidityImage"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="@+id/guidelineVerticalCenter"
+        app:layout_constraintRight_toLeftOf="@+id/guidelineVerticalTherdQuarter"
+        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal"
+        app:srcCompat="@drawable/humidity_icon" />
+
+    <TextView
+        android:id="@+id/humidityText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/sensorNotAvailable"
+        android:textAlignment="center"
+        android:textSize="22sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="@+id/guidelineVerticalTherdQuarter"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal" />
+
+</android.support.constraint.ConstraintLayout>
+
+<!--
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.st.BlueMS.demos.EnvironmentalSensorsFragment" android:orientation="vertical">
@@ -65,7 +224,7 @@
             android:layout_gravity="center|start"
             android:layout_marginEnd="20dp"
             android:layout_weight="1"
-            android:src="@drawable/temperature_icon"/>
+            app:srcCompat="@drawable/temperature_icon" />
 
         <TextView
 
@@ -97,7 +256,7 @@
             android:layout_gravity="center|start"
             android:layout_marginEnd="20dp"
             android:layout_weight="0.8"
-            android:src="@drawable/illuminance_icon"/>
+            app:srcCompat="@drawable/illuminance_icon"/>
 
         <TextView
             android:id="@+id/luminosityText"
@@ -131,7 +290,7 @@
             android:layout_gravity="center"
             android:layout_marginEnd="20dp"
             android:layout_weight="1"
-            android:src="@drawable/pressure_icon"/>
+            app:srcCompat="@drawable/pressure_icon"/>
 
         <TextView
             android:id="@+id/barometerText"
@@ -162,7 +321,7 @@
             android:layout_gravity="center|start"
             android:layout_marginEnd="20dp"
             android:layout_weight="0.8"
-            android:src="@drawable/humidity_icon"/>
+            app:srcCompat="@drawable/humidity_icon"/>
 
         <TextView
             android:id="@+id/humidityText"
@@ -177,3 +336,4 @@
     </LinearLayout>
     </LinearLayout>
 </LinearLayout>
+    -->
