--- a/BlueMS/src/main/res/layout/fragment_node_status.xml
+++ b/BlueMS/src/main/res/layout/fragment_node_status.xml
@@ -43,6 +43,7 @@
              tools:context="com.st.BlueMS.demos.NodeStatusFragment">
 
     <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginBottom="20dp"
@@ -52,8 +53,8 @@
             android:id="@+id/signalImage"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="0.8"
             android:gravity="center"
+            android:layout_weight="1"
             android:src="@drawable/signal_strenght" />
 
         <TextView
@@ -67,64 +68,61 @@
     </LinearLayout>
 
     <LinearLayout
+        android:orientation="horizontal"
         android:baselineAligned="false"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:layout_marginBottom="20dp">
 
-        <LinearLayout
+        <ImageView
+            android:id="@+id/batteryImage"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/batteryImage"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:src="@drawable/battery_missing" />
-
-        </LinearLayout>
+            android:gravity="center"
+            android:src="@drawable/battery_missing" />
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:gravity="center"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/batteryPercentageText"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:text="@string/sensorNotAvailable"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:gravity="center" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:id="@+id/batteryStatus"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:layout_weight="1"/>
-            <TextView
-                android:id="@+id/batteryVoltageText"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:gravity="center"
                 android:textAppearance="?android:attr/textAppearanceMedium"/>
 
-            <view android:layout_width="wrap_content"
-                  android:layout_height="0dp"
-                  android:layout_weight="1"
-                  class="com.st.BlueMS.demos.util.HidableTextView"
-                  android:id="@+id/batteryCurrentText"
-                  android:textAppearance="?android:attr/textAppearanceMedium"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/batteryStatusText"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:gravity="center"/>
+            <TextView
+                android:id="@+id/batteryVoltageText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textAppearance="?android:attr/textAppearanceMedium"/>
 
+            <TextView
+                android:id="@+id/batteryCurrentText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textAppearance="?android:attr/textAppearanceMedium"/>
+
+            <TextView
+                android:id="@+id/batteryRemainingTimeText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textAppearance="?android:attr/textAppearanceMedium"/>
 
         </LinearLayout>
 
