--- a/BlueMS/src/main/res/layout/fragment_switch.xml
+++ b/BlueMS/src/main/res/layout/fragment_switch.xml
@@ -47,7 +47,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/SwitchDemoDesc"
         android:layout_gravity="center_horizontal|top"
-        android:layout_margin="16dp"/>
+        android:layout_margin="@dimen/activity_vertical_margin"/>
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
