--- a/BlueMS/src/main/res/values/fragment_could_log.xml
+++ b/BlueMS/src/main/res/values/fragment_could_log.xml
@@ -35,20 +35,31 @@
   ~ OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY
   ~ OF SUCH DAMAGE.
   -->
-
 <resources>
-    <string name="cloudLog_bluemx_deviceIdHint">Device Id</string>
-    <string name="cloudLog_bluemx_deviceTypeHint">Device Type</string>
-    <string name="cloudLog_bluemx_authTokenHint">Authentication Token</string>
-    <string name="cloudLog_bluemx_organizationIDHint">Organization Id</string>
+    <string name="cloudLog_watson_deviceIdHint">Device Id</string>
+    <string name="cloudLog_watson_deviceTypeHint">Device Type</string>
+    <string name="cloudLog_watson_authTokenHint">Authentication Token</string>
+    <string name="cloudLog_watson_organizationIDHint">Organization Id</string>
 
-    <string name="cloudLog_bluemx_deviceIdError">Device Id must not be empty</string>
-    <string name="cloudLog_bluemx_deviceTypeError">Device Type must not be empty</string>
-    <string name="cloudLog_bluemx_authTokenError">Authentication Token must not be empty</string>
-    <string name="cloudLog_bluemx_organizationIDError">Organization Id must not be empty</string>
+    <string name="cloudLog_watson_deviceIdError">Device Id must not be empty</string>
+    <string name="cloudLog_watson_deviceTypeError">Device Type must not be empty</string>
+    <string name="cloudLog_watson_authTokenError">Authentication Token must not be empty</string>
+    <string name="cloudLog_watson_organizationIDError">Organization Id must not be empty</string>
 
     <string name="cloudLog_mqttErrorTitle">Mqtt Error</string>
     <string name="cloudLog_displayDataPage">View cloud data</string>
-    <string name="warningConnectionOn">Cloud connection is active</string>
+    <string name="cloudLog_warningConnectionOn">Cloud connection is active</string>
+
+    <string name="cloudLog_genericMqtt_brokerUrlHint">Broker url</string>
+    <string name="cloudLog_genericMqtt_userHint">User</string>
+    <string name="cloudLog_genericMqtt_passwordHint">Password</string>
+    <string name="cloudLog_genericMqtt_portHint">Port</string>
+    <string name="cloudLog_genericMqtt_secureConnectionHint">Ssh</string>
+
+    <string name="cloudLog_genericMqtt_clientIdHint">Client ID</string>
+    <string name="cloudLog_genericMqtt_brokerUrlError">Invalid url</string>
+    <string name="cloudLog_genericMqtt_userError">User must not be empty</string>
+    <string name="cloudLog_genericMqtt_portError">Invalid port number</string>
+
 
 </resources>
