--- a/BlueMS/src/main/res/layout/view_acc_event_multiple.xml
+++ b/BlueMS/src/main/res/layout/view_acc_event_multiple.xml
@@ -163,6 +163,7 @@
             android:layout_weight="1" />
 
         <TextView
+            android:id="@+id/accEvent_multiple_wakeUpText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
