--- a/BlueMS/src/main/res/layout/fragment_cloud_log.xml
+++ b/BlueMS/src/main/res/layout/fragment_cloud_log.xml
@@ -42,7 +42,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
-    tools:context="com.st.BlueMS.demos.CloudLogFragment">
+    tools:context="com.st.BlueMS.demos.Cloud.CloudLogFragment">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
