--- a/BlueMS/src/main/res/layout/fragment_compass_demo.xml
+++ b/BlueMS/src/main/res/layout/fragment_compass_demo.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.st.BlueMS.demos.CompassFragment"
+    tools:context="com.st.BlueMS.demos.memsSensorFusion.CompassFragment"
     android:orientation="vertical">
     <TextView
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -42,7 +42,7 @@
         android:layout_width="@dimen/CalibImgW"
         android:layout_height="@dimen/CalibImgH"
         android:layout_gravity="end"
-        android:backgroundTint="@android:color/transparent"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
         android:clickable="false"
         android:contentDescription="@string/CalibButtonDesc"
         android:focusable="false"
