--- a/BlueMS/src/main/res/values/fragment_could_log.xml
+++ b/BlueMS/src/main/res/values/fragment_could_log.xml
@@ -52,6 +52,7 @@
     <string name="cloudLog_warningConnectionOn">Cloud connection is active</string>
 
     <string name="cloudLog_genericMqtt_brokerUrlHint">Broker url</string>
+    <string name="cloudLog_genericMqtt_addressHint">tcp://address or ssl://address</string>
     <string name="cloudLog_genericMqtt_userHint">User</string>
     <string name="cloudLog_genericMqtt_passwordHint">Password</string>
     <string name="cloudLog_genericMqtt_portHint">Port</string>
@@ -68,5 +69,12 @@
     <string name="cloudLog_StAzure_registrationComplete">Registration completed</string>
     <string name="cloudLog_StAzure_registrationFail">Impossible complete the device registration</string>
     <string name="cloudLog_StAzure_invalidDeviceData">Invalid device data</string>
+    <string name="cloudLog_fwUpgrade_startUpgrade">Start firmware upgrade</string>
+    <string name="cloudLog_fwUpgrade_notification_title">A new firmware is available</string>
+    <string name="cloudLog_fwUpgrade_notification_desc">Download and install %1s ?</string>
+    <string name="cloudLog_fw_upgrade_download_desc">Downloading firmware</string>
+
+    <string name="cloudLog_Azure_connectionStringHit">Connection string</string>
+    <string name="cloudLog_azure_connectionStringError">Invalid connection string format</string>
 
 </resources>
