--- a/BlueMS/src/main/res/layout/fragment_cloud_log.xml
+++ b/BlueMS/src/main/res/layout/fragment_cloud_log.xml
@@ -71,7 +71,7 @@
                     android:id="@+id/cloudProviderSpinner"
                     android:layout_gravity="center_horizontal" />
                     <Button
-                        android:text="Details"
+                        android:text="@string/cloudLog_details"
                         android:id="@+id/showDetailsButton"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -94,6 +94,25 @@
             </LinearLayout>
 
         </android.support.v7.widget.CardView>
+
+        <LinearLayout
+            android:layout_margin="8dp"
+            android:id="@+id/cloudConnectionProgress"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ProgressBar
+                style="@style/Widget.AppCompat.ProgressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:indeterminate="true" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/cloudLog_connecting" />
+        </LinearLayout>
 
         <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
