--- a/BlueMS/src/main/res/values/fragment_could_log.xml
+++ b/BlueMS/src/main/res/values/fragment_could_log.xml
@@ -74,7 +74,19 @@
     <string name="cloudLog_fwUpgrade_notification_desc">Download and install %1s ?</string>
     <string name="cloudLog_fw_upgrade_download_desc">Downloading firmware</string>
 
-    <string name="cloudLog_Azure_connectionStringHit">Connection string</string>
+    <string name="cloudLog_azure_connectionStringHit">Connection string</string>
     <string name="cloudLog_azure_connectionStringError">Invalid connection string format</string>
+
+    <string name="cloudLog_aws_endpoint_hint">"AWS IoT Endpoint"</string>
+    <string name="cloudLog_aws_clientId_hint">"Client Id"</string>
+    <string name="cloudLog_aws_clientId_error">"Client Id most not be empty"</string>
+    <string name="cloudLog_aws_endpoint_value_hint"><![CDATA[xxxxxxxxxx.iot.<region>.amazonaws.com]]></string>
+    <string name="cloudLog_aws_endpoint_invalid_value">Invalid endpoint name</string>
+    <string name="cloudLog_aws_certificate">Certificate</string>
+    <string name="cloudLog_aws_select_file">Select file</string>
+    <string name="cloudLog_aws_privatekey">Private key</string>
+    <string name="cloudLog_details">Details</string>
+    <string name="cloudLog_connecting">Connecting…</string>
+
 
 </resources>
